Adding install command

--- a/client/makefile
+++ b/client/makefile
@@ -1,2 +1,5 @@
 main:
 	gcc src/main.c -o cryopaste -lcurl
+
+install:
+	if [ -a ~/bin ]; then mv cryopaste ~/bin; else mkdir ~/bin;mv cryopaste ~/bin;fi;
