Changing install to /usr/local/bin

--- a/client/makefile
+++ b/client/makefile
@@ -1,5 +1,12 @@
+SHELL=/bin/bash
+
 main:
 	gcc src/main.c -o cryopaste -lcurl
 
 install:
-	if [ -a ~/bin ]; then mv cryopaste ~/bin; else mkdir ~/bin;mv cryopaste ~/bin;fi;
+	if [ -a "/usr/local/bin" ]; then \
+		mv cryopaste /usr/local/bin; \
+	else \
+		mkdir -p /usr/local/bin; \
+		mv cryopaste /usr/local/bin; \
+	fi
